# chronicler-agentic-audit

./: README.md
chronicler/: README.md
chronicler/client/: README.md  env.example  pyproject.toml  test_integration.py
chronicler/client/chronicler_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chronicler/client/chronicler_client/agents/: README.md  __init__.py  agent_config.py  agent_manager.py  agent_types.py  base_agent.py  chronicler_agent.py  mcp_agent.py  mcp_server.py
chronicler/client/chronicler_client/config/: __init__.py  settings.py
chronicler/client/chronicler_client/decorators/: __init__.py  chronicler.py  types.py
chronicler/client/chronicler_client/services/: __init__.py  access_control_service.py  audit_service.py  chronicler_service.py  exceptions.py  registry_service.py  service_config.py
chronicler/client/examples/: __init__.py  agent_example.py  basic_usage.py  configuration_example.py  dspy_integration.py  error_handling.py
chronicler/client/tests/: __init__.py  test_agents.py  test_decorators.py  test_services.py
chronicler/docs/: README.md  explain-like-i-am-five.md  explain-like-i-am-fiveteen.md  pitch-and-what-it-does.md
chronicler/docs/api/: README.md
chronicler/docs/architecture/: README.md  client-sdk.md  data-flow.md  diagram-brief.md  layers-explained.md  services.md  smart-contracts.md
chronicler/docs/client/: README.md  configuration.md  decorators.md  (+4 more)
chronicler/landing/: package.json
chronicler/layer/: README.md  env.example  hardhat.config.ts  jest.config.js  package.json  tsconfig.json
(+52 files in other folders)
